--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -1,11 +1,11 @@
 <div class="login-container">
   <div class="login-card">
-    <h1>Login</h1>
+    <h1>{{ translate('auth.login.title') }}</h1>
     <p class="subtitle">Welcome back to ModestBazar</p>
 
     <form (ngSubmit)="onSubmit()" class="login-form">
       <div class="form-group">
-        <label for="email">Email</label>
+        <label for="email">{{ translate('auth.login.email') }}</label>
         <input
           type="email"
           id="email"
@@ -16,7 +16,7 @@
       </div>
 
       <div class="form-group">
-        <label for="password">Password</label>
+        <label for="password">{{ translate('auth.login.password') }}</label>
         <input
           type="password"
           id="password"
@@ -34,7 +34,7 @@
         @if (isSubmitting()) {
           Logging in...
         } @else {
-          Login
+          {{ translate('auth.login.submit') }}
         }
       </button>
     </form>
