--- a/src/app/features/products/product-list/product-filters/product-filters.component.css
+++ b/src/app/features/products/product-list/product-filters/product-filters.component.css
@@ -136,7 +136,7 @@
 .size-checkbox {
   justify-content: center;
   padding: 0.5rem;
-  border: 1px solid #e0e0e0;
+  border: none;
   border-radius: 4px;
   text-align: center;
   min-width: 48px;
@@ -144,7 +144,7 @@
 }
 
 .size-checkbox:hover {
-  border-color: #b36b3f;
+  background-color: rgba(179, 107, 63, 0.1);
 }
 
 .size-checkbox input:checked + span {
