--- a/src/app/layout/header/header.component.css
+++ b/src/app/layout/header/header.component.css
@@ -7,6 +7,7 @@
   left: 0;
   right: 0;
   z-index: 100;
+  direction: ltr; /* Force LTR for header in all languages */
 }
 
 .header-content {
@@ -20,6 +21,7 @@
   height: 80px;
   width: 100%;
   box-sizing: border-box;
+  direction: ltr; /* Force LTR for header content in all languages */
 }
 
 .logo {
@@ -300,6 +302,10 @@
 }
 
 @media (max-width: 768px) {
+  .header {
+    position: relative;
+  }
+
   .header-content {
     flex-wrap: wrap;
     gap: 1rem;
